Update configuration files and add new services
- Modified color schemes in qt5ct and qt6ct configurations.
- Changed font settings in qt5ct and qt6ct to use "Segoe UI".
- Added new mouse gesture rules in Solaar configuration.
- Introduced new systemd user services.
- Updated zsh configuration.
- Expanded package list to include.

--- a/configs/.config/kitty/dank-theme.conf
+++ b/configs/.config/kitty/dank-theme.conf
@@ -1,24 +1,25 @@
-cursor #e4e2e1
-cursor_text_color #c2c8c6
+cursor #e5e1e4
+cursor_text_color #c7c5ce
 
-foreground            #e4e2e1
-background            #131313
-selection_foreground  #2c3131
-selection_background  #c3c7c6
-url_color             #bbc9c7
-color0   #131313
-color1   #e44a52
-color2   #7ad66e
-color3   #dbc87b
-color4   #3b9485
-color5   #8e9695
-color6   #bbc9c7
+foreground            #e5e1e4
+background            #131315
+selection_foreground  #2e303b
+selection_background  #c5c5d4
+url_color             #c1c4e6
+
+color0   #131315
+color1   #e44f44
+color2   #6ed670
+color3   #dbd57b
+color4   #7877dd
+color5   #9698ac
+color6   #c1c4e6
 color7   #abb2bf
 color8   #5c6370
-color9   #e05f6b
-color10   #90e086
-color11   #e8d897
-color12   #c8d7d5
-color13   #3f866c
-color14   #4b8380
-color15   #ffffff
+color9   #e0645f
+color10  #86e087
+color11  #e8e397
+color12  #cfd2f7
+color13  #6675b8
+color14  #7970b6
+color15  #ffffff
