--- a/configs/.config/mango/conf/env.conf
+++ b/configs/.config/mango/conf/env.conf
@@ -8,7 +8,7 @@ env=TERMINAL,kitty
 # ========== Cursor settings ==========
 # Set cursor size in pixels
 env=XCURSOR_SIZE,24
-# Set cursor theme name (must be installed on system)
+# Set cursor theme name
 env=XCURSOR_THEME,breeze_cursors
 
 # ========== Desktop Environment ==========
@@ -26,21 +26,12 @@ env=DESKTOP_SESSION,wlroots
 # Requires xdg-desktop-portal-wlr or xdg-desktop-portal-gtk installed
 env=XDG_SESSION_DESKTOP,wlroots
 
-# ========== Input method ==========
-# GTK input method module - uncomment for fcitx support
-# env=GTK_IM_MODULE,fcitx
-# Qt input method module - uncomment for fcitx support
-# env=QT_IM_MODULE,fcitx
-# SDL input method module - uncomment for fcitx support
-# env=SDL_IM_MODULE,fcitx
-# X modifiers for input method - uncomment for fcitx support
-# env=XMODIFIERS,@im=fcitx
-# GLFW input method module - uncomment for ibus support
-# env=GLFW_IM_MODULE,ibus
+# ========== Dolphin Open-with Menu ==========
+env=XDG_MENU_PREFIX,arch-
 
 # ========== Qt and Wayland ==========
 # Qt platform abstraction - prefer Wayland, fallback to XCB/X11
-env=QT_QPA_PLATFORM,wayland;xcb
+env=QT_QPA_PLATFORM,wayland
 # Force DPI for Qt Wayland sessions (96 is standard)
 env=QT_WAYLAND_FORCE_DPI,96
 # Qt5 platform theme for consistent styling
@@ -50,33 +41,33 @@ env=QT_QPA_PLATFORMTHEME_QT6,qt6ct
 # Enable automatic screen scaling for Qt applications
 env=QT_AUTO_SCREEN_SCALE_FACTOR,1
 
-# ========== Electron and Wayland ==========
-# Hint for Electron apps to use native Wayland (auto-detect)
-env=ELECTRON_OZONE_PLATFORM_HINT,auto
-
-# Set Ozone platform to Wayland for Chromium-based apps
-env=OZONE_PLATFORM,wayland
-
-# ========== Mozilla Applications and Wayland ==========
-# Enable native Wayland support for Firefox and other Mozilla apps
-env=MOZ_ENABLE_WAYLAND,1
-
 # ========== GTK and Wayland ==========
 # Force GTK applications to use Wayland backend
 env=GDK_BACKEND,wayland
 
+# ========== Mozilla Applications and Wayland ==========
+# Enable native Wayland support for Firefox and other Mozilla apps
+# env=MOZ_ENABLE_WAYLAND,1
+
+# env=MOZ_DISABLE_RDD_SANDBOX,1
+
+# ========== Ozone Platform and Wayland ==========
+# Electron and Chromium: prefer Wayland, but still allow Xwayland if needed
+# env=OZONE_PLATFORM,wayland
+# env=ELECTRON_OZONE_PLATFORM_HINT,auto
+
 # ========== SDL and Wayland ==========
 # Force SDL2/SDL3 applications to use Wayland video driver
-env=SDL_VIDEODRIVER,wayland
+# env=SDL_VIDEODRIVER,wayland
 
 # ========== Clutter and Wayland ==========
 # Force Clutter toolkit to use Wayland backend
-env=CLUTTER_BACKEND,wayland
+# env=CLUTTER_BACKEND,wayland
 
 # ========== Hardware Video Acceleration ==========
 # VA-API driver for hardware-accelerated video decode/encode
 # Common values: iHD (Intel iGPU), radeonsi (AMD), nvidia (NVIDIA)
-# env=LIBVA_DRIVER_NAME,iHD
+# env=LIBVA_DRIVER_NAME,nvidia
 # VDPAU driver for hardware video acceleration (older standard)
 # env=VDPAU_DRIVER,radeonsi
 
@@ -86,12 +77,14 @@ env=CLUTTER_BACKEND,wayland
 # env=GBM_BACKEND,nvidia-drm
 # env=__GLX_VENDOR_LIBRARY_NAME,nvidia
 # G-Sync/VRR control (set to 1 to enable adaptive sync)
-# env=__GL_GSYNC_ALLOWED,0
-# env=__GL_VRR_ALLOWED,0
+# env=__GL_GSYNC_ALLOWED,1
+# env=__GL_VRR_ALLOWED,1
+
+# env=NVD_BACKEND,direct
 
 # ========== Java Applications ==========
 # Fix for Java GUI apps showing blank windows on some WMs
-env=_JAVA_AWT_WM_NONREPARENTING,1
+# env=_JAVA_AWT_WM_NONREPARENTING,1
 # Use WLToolkit for pure Wayland support in modern Java apps (experimental)
 # env=_JAVA_OPTIONS,-Dawt.toolkit.name=WLToolkit
 
@@ -103,3 +96,14 @@ env=_JAVA_AWT_WM_NONREPARENTING,1
 # Prevent legacy PulseAudio from conflicting with PipeWire
 # env=PULSE_SERVER,/run/user/1000/pulse/native
 
+# ========== Input method ==========
+# GTK input method module - uncomment for fcitx support
+# env=GTK_IM_MODULE,fcitx
+# Qt input method module - uncomment for fcitx support
+# env=QT_IM_MODULE,fcitx
+# SDL input method module - uncomment for fcitx support
+# env=SDL_IM_MODULE,fcitx
+# X modifiers for input method - uncomment for fcitx support
+# env=XMODIFIERS,@im=fcitx
+# GLFW input method module - uncomment for ibus support
+# env=GLFW_IM_MODULE,ibus
