--- a/configs/.config/mango/conf/windowrule.conf
+++ b/configs/.config/mango/conf/windowrule.conf
@@ -28,7 +28,11 @@
 # XDG Desktop Portal dialogs - system file pickers and dialogs
 windowrule=isfloating:1,appid:^xdg-desktop-portal-gtk$
 windowrule=isfloating:1,appid:^xdg-desktop-portal$
-windowrule=isfloating:1,appid:^xdg-desktop-portal-kde$
+windowrule=isfloating:1,appid:^xdg-desktop-portal-wlr$
+
+
+# QuickShell
+windowrule=isfloating:1,appid:^org.quickshell$
 
 # ========== Common GTK/Qt Dialogs ==========
 # Generic file chooser dialogs (catches most apps)
@@ -114,6 +118,11 @@ windowrule=isfloating:1,appid:^firefox$,title:^Library
 windowrule=isfloating:1,appid:^firefox$,title:^Page Info
 windowrule=isfloating:1,appid:^firefox$,title:^Extension:
 windowrule=isfloating:1,appid:^firefox$,title:^Opening
+# Float Zen dialogs
+windowrule=isfloating:1,appid:^zen$,title:^Library
+windowrule=isfloating:1,appid:^zen$,title:^Page Info
+windowrule=isfloating:1,appid:^zen$,title:^Extension:
+windowrule=isfloating:1,appid:^zen$,title:^Opening
 # Float Floorp dialogs
 windowrule=isfloating:1,appid:^floorp$,title:^Library
 windowrule=isfloating:1,appid:^floorp$,title:^Page Info
@@ -132,11 +141,16 @@ windowrule=isfloating:1,appid:^brave$,title:^Save File
 windowrule=isfloating:1,appid:^vivaldi$,title:^Save
 windowrule=isfloating:1,appid:^vivaldi$,title:^Open File
 # Float Edge dialogs
-windowrule=isfloating:1,appid:^microsoft-edge-stable$,title:^Save
-windowrule=isfloating:1,appid:^microsoft-edge-stable$,title:^Open File
+windowrule=isfloating:1,appid:^microsoft-edge$,title:^Save
+windowrule=isfloating:1,appid:^microsoft-edge$,title:^Open File
+# Float Helium dialogs
+# Float Edge dialogs
+windowrule=isfloating:1,appid:^helium$,title:^Save
+windowrule=isfloating:1,appid:^helium$,title:^Open File
 
 # Browser picture-in-picture windows - small floating video player
 windowrule=isfloating:1,title:Picture-in-Picture
+windowrule=isfloating:1,title:Picture in picture
 
 # ========== qBittorrent ==========
 # Float qBittorrent dialogs
@@ -149,6 +163,8 @@ windowrule=isfloating:1,appid:^Bitwarden$
 
 # ========== File Managers ==========
 # Dolphin file manager dialogs
+# windowrule=isfloating:1,appid:^org.kde.dolphin$,title:.*( - |— |– )?Dolphin$
+
 windowrule=isfloating:1,appid:^org.kde.dolphin$,title:^Copying
 windowrule=isfloating:1,appid:^org.kde.dolphin$,title:^Moving
 windowrule=isfloating:1,appid:^org.kde.dolphin$,title:^Renaming
@@ -215,11 +231,15 @@ windowrule=isfloating:1,appid:^virt-manager$,title:^Preferences
 # ========== Miscellaneous Apps ==========
 # Ark file archiver
 windowrule=isfloating:1,appid:^org.kde.ark$
+
 # Solaar Logitech device manager
 windowrule=isfloating:1,appid:^solaar$
 
 # Gopeed download manager
 windowrule=isfloating:1,appid:^gopeed$
+
+# Brisk download manager
+windowrule=isfloating:1,appid:^brisk$
 
 # Persepolis Download Manager
 windowrule=isfloating:1,appid:^com.github.persepolisdm.persepolis$
