--- a/configs/.config/mango/config.conf
+++ b/configs/.config/mango/config.conf
@@ -6,6 +6,7 @@
 source=~/.config/mango/conf/animation.conf
 source=~/.config/mango/conf/decoration.conf
 source=~/.config/mango/conf/env.conf
+source=~/.config/mango/conf/exec.conf
 source=~/.config/mango/conf/input.conf
 source=~/.config/mango/conf/keybinding.conf
 source=~/.config/mango/conf/layout.conf
