--- a/configs/.config/kitty/dank-tabs.conf
+++ b/configs/.config/kitty/dank-tabs.conf
@@ -5,16 +5,16 @@ tab_bar_align           left
 tab_bar_min_tabs        2
 tab_bar_margin_width    0.0
 tab_bar_margin_height   2.5 1.5
-tab_bar_margin_color    #131313
+tab_bar_margin_color    #131315
 
-tab_bar_background              #131313
+tab_bar_background              #131315
 
-active_tab_foreground           #9dacaa
-active_tab_background           #13201f
+active_tab_foreground           #000000
+active_tab_background           #717593
 active_tab_font_style           bold
 
-inactive_tab_foreground         #c2c8c6
-inactive_tab_background         #131313
+inactive_tab_foreground         #c7c5ce
+inactive_tab_background         #131315
 inactive_tab_font_style         normal
 
 tab_activity_symbol             " ● "
