--- a/configs/.config/mango/conf/keybinding.conf
+++ b/configs/.config/mango/conf/keybinding.conf
@@ -11,7 +11,14 @@ bind=SUPER+SHIFT,R,reload_config
 
 # ========== Close Window =========
 # Gracefully close the focused client (Alt+F4 equivalent)
-bind=SUPER,Q,killclient                
+bind=SUPER,Q,killclient
+
+# ========== Screenshot =========
+bind=none,Print,spawn_shell,FILE=~/Pictures/Screenshots/$(date +\%Y\%m\%d\%H\%M\%S).png && grim -g "$(slurp)" - | tee "$FILE" | wl-copy && notify-send -a "Screenshot" "Screenshot Saved" "File saved to $FILE"
+
+
+# ========== Switch Keyboard Layout =========
+bind=none,XF86HomePage,switch_keyboard_layout
 
 # ========== DankMaterialShell ==========
 # Open DMS Spotlight search overlay for quick app launching
@@ -33,7 +40,6 @@ bind=SUPER+SHIFT,Q,spawn,dms ipc call powermenu toggle
 # Lock the session through the DMS lock screen
 bind=SUPER+ALT+L,spawn,dms ipc call lock lock
 
-
 # # ========== Noctalia Shell ==========
 # # Open Noctalia Spotlight application launcher
 # bind=SUPER,A,spawn,qs -c noctalia-shell ipc call launcher toggle
@@ -54,15 +60,16 @@ bind=SUPER+ALT+L,spawn,dms ipc call lock lock
 # # Lock the session through the Noctalia lock screen
 # bind=SUPER+ALT+L,spawn,qs -c noctalia-shell ipc call lockScreen lock
 
+
 # ========== Applications ==========
-# Launch Kitty terminal on the focused workspace
+# Launch terminal
 bind=SUPER,Return,spawn,kitty
-# Launch Dolphin file manager
+# Launch file manager
 bind=SUPER,E,spawn,dolphin
-# Launch Brave browser
-bind=SUPER,B,spawn,brave
+# Launch browser
+bind=SUPER,B,spawn,floorp
 # Launch Ferdium
-bind=SUPER,F,spawn,ferdium
+bind=SUPER,F,spawn_on_empty,ferdium,2
 
 # ========== Move Window Focus ==========
 # Cycle focus forward through the client stack
@@ -75,8 +82,10 @@ bind=SUPER,Z,focuslast
 bind=SUPER,Left,focusdir,left
 # Focus the closest client to the right
 bind=SUPER,Right,focusdir,right
-# bind=SUPER,Up,focusdir,up
-# bind=SUPER,Down,focusdir,down
+# Focus the closest client to the top
+bind=SUPER,Up,focusdir,up
+# Focus the closest client to the bottom
+bind=SUPER,Down,focusdir,down
 
 # ========== Move Monitor Focus ==========
 # Move keyboard focus to the monitor left of the current one
@@ -111,24 +120,24 @@ bind=SUPER+CTRL+SHIFT,Left,exchange_client,left
 bind=SUPER+CTRL+SHIFT,Right,exchange_client,right
 
 # ========== Move Window Location ==========
-# Nudge floating windows upward by 50 pixels
-bind=SUPER+ALT,Up,movewin,+0,-50
-# Nudge floating windows downward by 50 pixels
-bind=SUPER+ALT,Down,movewin,+0,+50
-# Nudge floating windows left by 50 pixels
-bind=SUPER+ALT,Left,movewin,-50,+0
-# Nudge floating windows right by 50 pixels
-bind=SUPER+ALT,Right,movewin,+50,+0
+# Nudge floating windows upward by 10 pixels
+bind=SUPER+ALT,Up,movewin,+0,-10
+# Nudge floating windows downward by 10 pixels
+bind=SUPER+ALT,Down,movewin,+0,+10
+# Nudge floating windows left by 10 pixels
+bind=SUPER+ALT,Left,movewin,-10,+0
+# Nudge floating windows right by 10 pixels
+bind=SUPER+ALT,Right,movewin,+10,+0
 
 # ========== Resize Window ==========
 # Shrink floating windows vertically from the bottom edge
-bind=ALT+CTRL,Up,resizewin,+0,-50
+bind=ALT+CTRL,Up,resizewin,+0,-10
 # Grow floating windows vertically from the bottom edge
-bind=ALT+CTRL,Down,resizewin,+0,+50
+bind=ALT+CTRL,Down,resizewin,+0,+10
 # Shrink floating windows horizontally from the right edge
-bind=ALT+CTRL,Left,resizewin,-50,+0
+bind=ALT+CTRL,Left,resizewin,-10,+0
 # Grow floating windows horizontally from the right edge
-bind=ALT+CTRL,Right,resizewin,+50,+0
+bind=ALT+CTRL,Right,resizewin,+10,+0
 
 # ========== Window States ==========
 # Keep the focused window visible on every tag
@@ -149,7 +158,8 @@ bind=SUPER,D,minimized
 bind=SUPER+SHIFT,D,restore_minimized
 # Toggle overlay/always-on-top mode for the focused window
 bind=SUPER,O,toggleoverlay
-# bind=ALT,Z,toggle_scratchpad
+# Toggle scratchpad mode for the focused window
+bind=SUPER,S,toggle_scratchpad
 
 # ========== Scroller Layout Keys ==========
 # Cycle through saved scroller proportion presets
@@ -163,7 +173,7 @@ bind=SUPER,R,switch_proportion_preset
 
 # ========== Switch Layouts ==========
 # Cycle through layouts defined in circle_layout
-bind=SUPER+CTRL,n,switch_layout
+bind=SUPER+CTRL,N,switch_layout
 # bind=CTRL+SUPER,i,setlayout,tile
 # bind=CTRL+SUPER,l,setlayout,scroller
 
@@ -174,18 +184,16 @@ bind=SUPER+CTRL,n,switch_layout
 # bind=CTRL,Right,viewtoright_have_client,0
 
 # ========== Switch to Tag 1-9 ==========
-# View tag/workspace 1 on the focused monitor
+# View tag/workspace 1-9 on the focused monitor
 bind=SUPER,1,view,1,0
-# View tag/workspace 2 on the focused monitor
 bind=SUPER,2,view,2,0
-# View tag/workspace 3 on the focused monitor
 bind=SUPER,3,view,3,0
-# bind=SUPER,4,view,4,0
-# bind=SUPER,5,view,5,0
-# bind=SUPER,6,view,6,0
-# bind=SUPER,7,view,7,0
-# bind=SUPER,8,view,8,0
-# bind=SUPER,9,view,9,0
+bind=SUPER,4,view,4,0
+bind=SUPER,5,view,5,0
+bind=SUPER,6,view,6,0
+bind=SUPER,7,view,7,0
+bind=SUPER,8,view,8,0
+bind=SUPER,9,view,9,0
 # Toggle to the previously viewed tag
 bind=SUPER,Tab,view,-1,0
 
@@ -195,57 +203,51 @@ bind=SUPER,Page_Up,viewtoleft_have_client,0
 bind=SUPER,Page_Down,viewtoright_have_client,0
 
 # ========== Move Window to Tag 1-9 ==========
-# Move focused window to tag 1 while keeping focus
+# Move focused window to tag 1-9 while keeping focus
 bind=SUPER+CTRL,1,tag,1,0
-# Move focused window to tag 2 while keeping focus
 bind=SUPER+CTRL,2,tag,2,0
-# Move focused window to tag 3 while keeping focus
 bind=SUPER+CTRL,3,tag,3,0
-# bind=SUPER+CTRL,4,tag,4,0
-# bind=SUPER+CTRL,5,tag,5,0
-# bind=SUPER+CTRL,6,tag,6,0
-# bind=SUPER+CTRL,7,tag,7,0
-# bind=SUPER+CTRL,8,tag,8,0
-# bind=SUPER+CTRL,9,tag,9,0
+bind=SUPER+CTRL,4,tag,4,0
+bind=SUPER+CTRL,5,tag,5,0
+bind=SUPER+CTRL,6,tag,6,0
+bind=SUPER+CTRL,7,tag,7,0
+bind=SUPER+CTRL,8,tag,8,0
+bind=SUPER+CTRL,9,tag,9,0
 
 # ========== Toggle View Tag 1-9 ==========
-# Toggle viewing tag 1 alongside the current tag
+# Toggle viewing tag 1-9 alongside the current tag
 bind=ALT,1,toggleview,1
-# Toggle viewing tag 2 alongside the current tag
 bind=ALT,2,toggleview,2
-# Toggle viewing tag 3 alongside the current tag
 bind=ALT,3,toggleview,3
-# bind=ALT,4,toggleview,4
-# bind=ALT,5,toggleview,5
-# bind=ALT,6,toggleview,6
-# bind=ALT,7,toggleview,7
-# bind=ALT,8,toggleview,8
-# bind=ALT,9,toggleview,9
+bind=ALT,4,toggleview,4
+bind=ALT,5,toggleview,5
+bind=ALT,6,toggleview,6
+bind=ALT,7,toggleview,7
+bind=ALT,8,toggleview,8
+bind=ALT,9,toggleview,9
 
 # ========== Toggle Window on Tag 1-9 ==========
-# bind=SUPER+ALT,1,toggletag,1
-# bind=SUPER+ALT,2,toggletag,2
-# bind=SUPER+ALT,3,toggletag,3
-# bind=SUPER+ALT,4,toggletag,4
-# bind=SUPER+ALT,5,toggletag,5
-# bind=SUPER+ALT,6,toggletag,6
-# bind=SUPER+ALT,7,toggletag,7
-# bind=SUPER+ALT,8,toggletag,8
-# bind=SUPER+ALT,9,toggletag,9
+bind=SUPER+ALT,1,toggletag,1
+bind=SUPER+ALT,2,toggletag,2
+bind=SUPER+ALT,3,toggletag,3
+bind=SUPER+ALT,4,toggletag,4
+bind=SUPER+ALT,5,toggletag,5
+bind=SUPER+ALT,6,toggletag,6
+bind=SUPER+ALT,7,toggletag,7
+bind=SUPER+ALT,8,toggletag,8
+bind=SUPER+ALT,9,toggletag,9
 
 # ========== View Combo Tag 1-9 ==========
-# Show predefined combination tag set #1
+# Show predefined combination tag set #1-9
 bind=CTRL+ALT,1,comboview,1
-# Show predefined combination tag set #2
 bind=CTRL+ALT,2,comboview,2
-# Show predefined combination tag set #3
 bind=CTRL+ALT,3,comboview,3
-# bind=CTRL+ALT,4,comboview,4
-# bind=CTRL+ALT,5,comboview,5
-# bind=CTRL+ALT,6,comboview,6
-# bind=CTRL+ALT,7,comboview,7
-# bind=CTRL+ALT,8,comboview,8
-# bind=CTRL+ALT,9,comboview,9
+bind=CTRL+ALT,4,comboview,4
+bind=CTRL+ALT,5,comboview,5
+bind=CTRL+ALT,6,comboview,6
+bind=CTRL+ALT,7,comboview,7
+bind=CTRL+ALT,8,comboview,8
+bind=CTRL+ALT,9,comboview,9
 
 # ========== Gaps Control ==========
 # bind=ALT+SHIFT,X,incgaps,1
@@ -255,8 +257,8 @@ bind=CTRL+ALT,3,comboview,3
 # ========== Mouse Button Bindings ==========
 # Hold Super + left mouse to drag tiled/floating clients
 mousebind=SUPER,btn_left,moveresize,curmove
-# Alt + middle click sets the scroller split to 50/50
-mousebind=ALT,btn_middle,set_proportion,0.5
+# Alt + middle click sets the scroller split to 10/10
+# mousebind=ALT,btn_middle,set_proportion,0.5
 # Hold Super + right mouse to interactively resize
 mousebind=SUPER,btn_right,moveresize,curresize
 # mousebind=SUPER+CTRL,btn_left,minimized
@@ -268,9 +270,9 @@ mousebind=SUPER,btn_right,moveresize,curresize
 
 # ========== Axis Bindings (Scroll Wheel) ==========
 # Super + scroll up focuses the window on the left
-axisbind=SUPER,UP,focusdir,left
+axisbind=SUPER,UP,viewtoleft_have_client,0
 # Super + scroll down focuses the window on the right
-axisbind=SUPER,DOWN,focusdir,right
+axisbind=SUPER,DOWN,viewtoright_have_client,0
 # Super+Ctrl + scroll up sends window to previous tag
 axisbind=SUPER+CTRL,UP,tagtoleft,0
 # Super+Ctrl + scroll down sends window to next tag
@@ -291,16 +293,25 @@ axisbind=SUPER+CTRL,DOWN,tagtoright,0
 # gesturebind=none,down,4,toggleoverview,1
 
 # ========== Multimedia Keys ==========
-# bind=CTRL,comma,spawn,dms ipc call brightness decrement 2 ""
-# bind=CTRL,period,spawn,dms ipc call brightness increment 2 ""
-# Alt + comma decreases system volume by 3 units through DMS
-bind=ALT,comma,spawn,dms ipc call audio decrement 3
-# Alt + period increases system volume by 3 units through DMS
-bind=ALT,period,spawn,dms ipc call audio increment 3
-# bind=none,XF86AudioRaiseVolume,spawn,dms ipc call audio increment 3
-# bind=none,XF86AudioLowerVolume,spawn,dms ipc call audio decrement 3
+# Controls system volume via keyboard multimedia buttons through DMS
+bind=none,XF86AudioRaiseVolume,spawn_shell,dms ipc call audio increment 5
+bind=none,XF86AudioLowerVolume,spawn_shell,dms ipc call audio decrement 5
+bind=none,XF86AudioMute,spawn_shell,dms ipc call audio mute
+# Controls media playback via keyboard multimedia buttons through DMS
+bind=none,XF86AudioPlay,spawn_shell,dms ipc call mpris playPause
+bind=none,XF86AudioStop,spawn_shell,dms ipc call mpris stop
+bind=none,XF86AudioNext,spawn_shell,dms ipc call mpris next
+bind=none,XF86AudioPrev,spawn_shell,dms ipc call mpris previous
+
+# Controls monitor brightness via keyboard multimedia buttons through DMS
 # bind=none,XF86MonBrightnessUp,spawn,dms ipc call brightness increment 1
 # bind=none,XF86MonBrightnessDown,spawn,dms ipc call brightness decrement 1
+
+
+
+
+
+
 
 # ========== Lid Switch Bindings ==========
 # Power down the internal panel when the lid closes
