--- a/configs/.config/mango/conf/rule.conf
+++ b/configs/.config/mango/conf/rule.conf
@@ -13,19 +13,49 @@
 #   no_render_border- Don't render borders for this tag (0=show borders, 1=hide borders)
 
 # Tag 1 - Configured for all three monitors
-tagrule=id:1,monitor_name:HDMI-A-1,layout_name:scroller,no_hide:1
-tagrule=id:1,monitor_name:DP-2,layout_name:vertical_scroller,no_hide:1
-tagrule=id:1,monitor_name:eDP-1,layout_name:scroller,no_hide:1
+tagrule=id:1,monitor_name:HDMI-A-1,layout_name:scroller,no_hide:0
+tagrule=id:1,monitor_name:DP-2,layout_name:vertical_scroller,no_hide:0
+tagrule=id:1,monitor_name:eDP-1,layout_name:scroller,no_hide:0
 
 # Tag 2 - Configured for all three monitors
-tagrule=id:2,monitor_name:HDMI-A-1,layout_name:scroller,no_hide:1
-tagrule=id:2,monitor_name:DP-2,layout_name:vertical_scroller,no_hide:1
-tagrule=id:2,monitor_name:eDP-1,layout_name:scroller,no_hide:1
+tagrule=id:2,monitor_name:HDMI-A-1,layout_name:scroller,no_hide:0
+tagrule=id:2,monitor_name:DP-2,layout_name:vertical_scroller,no_hide:0
+tagrule=id:2,monitor_name:eDP-1,layout_name:scroller,no_hide:0
 
 # Tag 3 - Configured for all three monitors
-tagrule=id:3,monitor_name:HDMI-A-1,layout_name:scroller,no_hide:1
-tagrule=id:3,monitor_name:DP-2,layout_name:vertical_scroller,no_hide:1
-tagrule=id:3,monitor_name:eDP-1,layout_name:scroller,no_hide:1
+tagrule=id:3,monitor_name:HDMI-A-1,layout_name:scroller,no_hide:0
+tagrule=id:3,monitor_name:DP-2,layout_name:vertical_scroller,no_hide:0
+tagrule=id:3,monitor_name:eDP-1,layout_name:scroller,no_hide:0
+
+# Tag 4 - Configured for all three monitors
+tagrule=id:4,monitor_name:HDMI-A-1,layout_name:scroller,no_hide:0
+tagrule=id:4,monitor_name:DP-2,layout_name:vertical_scroller,no_hide:0
+tagrule=id:4,monitor_name:eDP-1,layout_name:scroller,no_hide:0
+
+# Tag 5 - Configured for all three monitors
+tagrule=id:5,monitor_name:HDMI-A-1,layout_name:scroller,no_hide:0
+tagrule=id:5,monitor_name:DP-2,layout_name:vertical_scroller,no_hide:0
+tagrule=id:5,monitor_name:eDP-1,layout_name:scroller,no_hide:0
+
+# Tag 6 - Configured for all three monitors
+tagrule=id:6,monitor_name:HDMI-A-1,layout_name:scroller,no_hide:0
+tagrule=id:6,monitor_name:DP-2,layout_name:vertical_scroller,no_hide:0
+tagrule=id:6,monitor_name:eDP-1,layout_name:scroller,no_hide:0
+
+# Tag 7 - Configured for all three monitors
+tagrule=id:7,monitor_name:HDMI-A-1,layout_name:scroller,no_hide:0
+tagrule=id:7,monitor_name:DP-2,layout_name:vertical_scroller,no_hide:0
+tagrule=id:7,monitor_name:eDP-1,layout_name:scroller,no_hide:0
+
+# Tag 8 - Configured for all three monitors
+tagrule=id:8,monitor_name:HDMI-A-1,layout_name:scroller,no_hide:0
+tagrule=id:8,monitor_name:DP-2,layout_name:vertical_scroller,no_hide:0
+tagrule=id:8,monitor_name:eDP-1,layout_name:scroller,no_hide:0
+
+# Tag 9 - Configured for all three monitors
+tagrule=id:9,monitor_name:HDMI-A-1,layout_name:scroller,no_hide:0
+tagrule=id:9,monitor_name:DP-2,layout_name:vertical_scroller,no_hide:0
+tagrule=id:9,monitor_name:eDP-1,layout_name:scroller,no_hide:0
 
 # ========= Layer Rules =========
 # Syntax: layerrule=noblur:0/1,noanim:0/1,noshadow:0/1,layer_name:NAME,animation_type_open:TYPE,animation_type_close:TYPE
