--- a/configs/.config/qt6ct/colors/matugen.conf
+++ b/configs/.config/qt6ct/colors/matugen.conf
@@ -1,10 +1,10 @@
 [ColorScheme]
-active_colors=#e4e2e1, #131313, #1f201f, #8c9291, #424847, #424847, #e4e2e1, #263332, #e4e2e1, #131313, #131313, #000000, #bbc9c7, #263332, #c3c7c6, #c3c7c6, #1b1c1b, #131313, #131313, #c2c8c6, #c2c8c6
-disabled_colors=#c2c8c6, #424847, #1f201f, #8c9291, #424847, #424847, #c2c8c6, #c2c8c6, #c2c8c6, #424847, #424847, #000000, #424847, #c2c8c6, #c2c8c6, #c2c8c6, #424847, #424847, #424847, #c2c8c6, #c2c8c6
-inactive_colors=#c2c8c6, #131313, #1f201f, #8c9291, #424847, #424847, #c2c8c6, #c2c8c6, #c2c8c6, #131313, #131313, #000000, #c3c7c6, #2c3131, #c3c7c6, #c3c7c6, #1b1c1b, #131313, #131313, #c2c8c6, #c2c8c6
+active_colors=#e5e1e4, #131315, #201f21, #919098, #46464d, #46464d, #e5e1e4, #2a2f49, #e5e1e4, #131315, #131315, #000000, #c1c4e6, #2a2f49, #c5c5d4, #c5c5d4, #1c1b1d, #131315, #131315, #c7c5ce, #c7c5ce
+disabled_colors=#c7c5ce, #46464d, #201f21, #919098, #46464d, #46464d, #c7c5ce, #c7c5ce, #c7c5ce, #46464d, #46464d, #000000, #46464d, #c7c5ce, #c7c5ce, #c7c5ce, #46464d, #46464d, #46464d, #c7c5ce, #c7c5ce
+inactive_colors=#c7c5ce, #131315, #201f21, #919098, #46464d, #46464d, #c7c5ce, #c7c5ce, #c7c5ce, #131315, #131315, #000000, #c5c5d4, #2e303b, #c5c5d4, #c5c5d4, #1c1b1d, #131315, #131315, #c7c5ce, #c7c5ce
 
 [ColorEffects:Disabled]
-Color=194,200,198
+Color=199,197,206
 ColorAmount=0
 ColorEffect=0
 ContrastAmount=0.65
@@ -14,7 +14,7 @@ IntensityEffect=2
 
 [ColorEffects:Inactive]
 ChangeSelectionColor=true
-Color=140,146,145
+Color=145,144,152
 ColorAmount=0.025
 ColorEffect=2
 ContrastAmount=0.1
@@ -24,121 +24,121 @@ IntensityAmount=0
 IntensityEffect=0
 
 [Colors:Button]
-BackgroundAlternate=31,32,31
-BackgroundNormal=19,19,19
-DecorationFocus=187,201,199
-DecorationHover=187,201,199
-ForegroundActive=187,201,199
-ForegroundInactive=194,200,198
-ForegroundLink=200,196,210
+BackgroundAlternate=32,31,33
+BackgroundNormal=19,19,21
+DecorationFocus=193,196,230
+DecorationHover=193,196,230
+ForegroundActive=193,196,230
+ForegroundInactive=199,197,206
+ForegroundLink=218,196,147
 ForegroundNegative=255,180,171
-ForegroundNeutral=195,199,198
-ForegroundNormal=228,226,225
-ForegroundPositive=200,196,210
-ForegroundVisited=195,199,198
+ForegroundNeutral=197,197,212
+ForegroundNormal=229,225,228
+ForegroundPositive=218,196,147
+ForegroundVisited=197,197,212
 
 [Colors:Complementary]
-BackgroundAlternate=31,32,31
-BackgroundNormal=19,19,19
-DecorationFocus=187,201,199
-DecorationHover=187,201,199
-ForegroundActive=187,201,199
-ForegroundInactive=194,200,198
-ForegroundLink=200,196,210
+BackgroundAlternate=32,31,33
+BackgroundNormal=19,19,21
+DecorationFocus=193,196,230
+DecorationHover=193,196,230
+ForegroundActive=193,196,230
+ForegroundInactive=199,197,206
+ForegroundLink=218,196,147
 ForegroundNegative=255,180,171
-ForegroundNeutral=195,199,198
-ForegroundNormal=228,226,225
-ForegroundPositive=200,196,210
-ForegroundVisited=195,199,198
+ForegroundNeutral=197,197,212
+ForegroundNormal=229,225,228
+ForegroundPositive=218,196,147
+ForegroundVisited=197,197,212
 
 [Colors:Header]
-BackgroundAlternate=19,19,19
-BackgroundNormal=19,19,19
-DecorationFocus=187,201,199
-DecorationHover=187,201,199
-ForegroundActive=187,201,199
-ForegroundInactive=194,200,198
-ForegroundLink=200,196,210
+BackgroundAlternate=19,19,21
+BackgroundNormal=19,19,21
+DecorationFocus=193,196,230
+DecorationHover=193,196,230
+ForegroundActive=193,196,230
+ForegroundInactive=199,197,206
+ForegroundLink=218,196,147
 ForegroundNegative=255,180,171
-ForegroundNeutral=195,199,198
-ForegroundNormal=228,226,225
-ForegroundPositive=200,196,210
-ForegroundVisited=195,199,198
+ForegroundNeutral=197,197,212
+ForegroundNormal=229,225,228
+ForegroundPositive=218,196,147
+ForegroundVisited=197,197,212
 
 [Colors:Header][Inactive]
-BackgroundAlternate=19,19,19
-BackgroundNormal=19,19,19
-DecorationFocus=187,201,199
-DecorationHover=187,201,199
-ForegroundActive=187,201,199
-ForegroundInactive=194,200,198
-ForegroundLink=200,196,210
+BackgroundAlternate=19,19,21
+BackgroundNormal=19,19,21
+DecorationFocus=193,196,230
+DecorationHover=193,196,230
+ForegroundActive=193,196,230
+ForegroundInactive=199,197,206
+ForegroundLink=218,196,147
 ForegroundNegative=255,180,171
-ForegroundNeutral=195,199,198
-ForegroundNormal=228,226,225
-ForegroundPositive=200,196,210
-ForegroundVisited=195,199,198
+ForegroundNeutral=197,197,212
+ForegroundNormal=229,225,228
+ForegroundPositive=218,196,147
+ForegroundVisited=197,197,212
 
 [Colors:Selection]
-BackgroundAlternate=19,32,31
-BackgroundNormal=187,201,199
-DecorationFocus=187,201,199
-DecorationHover=187,201,199
-ForegroundActive=38,51,50
-ForegroundInactive=194,200,198
-ForegroundLink=200,196,210
+BackgroundAlternate=113,117,147
+BackgroundNormal=193,196,230
+DecorationFocus=193,196,230
+DecorationHover=193,196,230
+ForegroundActive=42,47,73
+ForegroundInactive=199,197,206
+ForegroundLink=218,196,147
 ForegroundNegative=255,180,171
-ForegroundNeutral=195,199,198
-ForegroundNormal=38,51,50
-ForegroundPositive=200,196,210
-ForegroundVisited=195,199,198
+ForegroundNeutral=197,197,212
+ForegroundNormal=42,47,73
+ForegroundPositive=218,196,147
+ForegroundVisited=197,197,212
 
 [Colors:Tooltip]
-BackgroundAlternate=19,19,19
-BackgroundNormal=19,19,19
-DecorationFocus=187,201,199
-DecorationHover=187,201,199
-ForegroundActive=187,201,199
-ForegroundInactive=194,200,198
-ForegroundLink=200,196,210
+BackgroundAlternate=19,19,21
+BackgroundNormal=19,19,21
+DecorationFocus=193,196,230
+DecorationHover=193,196,230
+ForegroundActive=193,196,230
+ForegroundInactive=199,197,206
+ForegroundLink=218,196,147
 ForegroundNegative=255,180,171
-ForegroundNeutral=195,199,198
-ForegroundNormal=228,226,225
-ForegroundPositive=200,196,210
-ForegroundVisited=195,199,198
+ForegroundNeutral=197,197,212
+ForegroundNormal=229,225,228
+ForegroundPositive=218,196,147
+ForegroundVisited=197,197,212
 
 [Colors:View]
-BackgroundAlternate=27,28,27
-BackgroundNormal=19,19,19
-DecorationFocus=187,201,199
-DecorationHover=187,201,199
-ForegroundActive=187,201,199
-ForegroundInactive=194,200,198
-ForegroundLink=200,196,210
+BackgroundAlternate=28,27,29
+BackgroundNormal=19,19,21
+DecorationFocus=193,196,230
+DecorationHover=193,196,230
+ForegroundActive=193,196,230
+ForegroundInactive=199,197,206
+ForegroundLink=218,196,147
 ForegroundNegative=255,180,171
-ForegroundNeutral=195,199,198
-ForegroundNormal=228,226,225
-ForegroundPositive=200,196,210
-ForegroundVisited=195,199,198
+ForegroundNeutral=197,197,212
+ForegroundNormal=229,225,228
+ForegroundPositive=218,196,147
+ForegroundVisited=197,197,212
 
 [Colors:Window]
-BackgroundAlternate=19,19,19
-BackgroundNormal=19,19,19
-DecorationFocus=187,201,199
-DecorationHover=187,201,199
-ForegroundActive=187,201,199
-ForegroundInactive=194,200,198
-ForegroundLink=200,196,210
+BackgroundAlternate=19,19,21
+BackgroundNormal=19,19,21
+DecorationFocus=193,196,230
+DecorationHover=193,196,230
+ForegroundActive=193,196,230
+ForegroundInactive=199,197,206
+ForegroundLink=218,196,147
 ForegroundNegative=255,180,171
-ForegroundNeutral=195,199,198
-ForegroundNormal=228,226,225
-ForegroundPositive=200,196,210
-ForegroundVisited=195,199,198
+ForegroundNeutral=197,197,212
+ForegroundNormal=229,225,228
+ForegroundPositive=218,196,147
+ForegroundVisited=197,197,212
 
 [WM]
-activeBackground=19,19,19
-activeBlend=228,226,225
-activeForeground=228,226,225
-inactiveBackground=19,19,19
-inactiveBlend=194,200,198
-inactiveForeground=194,200,198
+activeBackground=19,19,21
+activeBlend=229,225,228
+activeForeground=229,225,228
+inactiveBackground=19,19,21
+inactiveBlend=199,197,206
+inactiveForeground=199,197,206
