Refactor configuration files: update animation settings, enhance environment variables, and add appearance and layer rules configurations

--- a/configs/.config/mango/conf/exec.conf
+++ b/configs/.config/mango/conf/exec.conf
@@ -1,17 +1,32 @@
 # ==============================================
-# Environment configuration file
+# Exec Configuration File
 # ==============================================
 #
 #   exec        - will execute the program after each config reload.
 #   exec-once   - will only execute once after mango startup.
+#
 
-# ========== DankMaterialShell ==========
-# exec-once=dms run
+# Tell DBus-activated services which Wayland display & desktop to use
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=wlroots
+# Start the portal backend
+# exec-once=/usr/lib/xdg-desktop-portal-wlr
 
-# ========== User Applications =========
-# Solaar
-# exec-once=solaar -w hide
-# Ferdium
-# exec-once=ferdium --start-in-tray
-# Brisk download manager
+
+
+# Move focus to primary monitor on startup
+exec-once=mmsg -d focusmon,HDMI-A-1
+
+# Clipboard manager
+exec-once=wl-paste --watch cliphist store
+
+# Run DankMaterialShell
+exec-once=dms run
+
+# Run Solaar
+exec-once=solaar -w hide
+
+# Run Ferdium
+exec-once=ferdium --start-in-tray
+
+# Run Brisk download manager
 # exec-once=brisk --from-startup
