--- a/configs/.config/mango/conf/keybinding.conf
+++ b/configs/.config/mango/conf/keybinding.conf
@@ -66,10 +66,12 @@ bind=SUPER+ALT+L,spawn,dms ipc call lock lock
 bind=SUPER,Return,spawn,kitty
 # Launch file manager
 bind=SUPER,E,spawn,dolphin
+# Launch visual studio code
+bind=SUPER,C,spawn,code
 # Launch browser
-bind=SUPER,B,spawn,floorp
+bind=SUPER,B,spawn,microsoft-edge-stable
 # Launch Ferdium
-bind=SUPER,F,spawn_on_empty,ferdium,2
+bind=SUPER,F,spawn,ferdium
 
 # ========== Move Window Focus ==========
 # Cycle focus forward through the client stack
