--- a/configs/.config/mango/conf/misc.conf
+++ b/configs/.config/mango/conf/misc.conf
@@ -1,5 +1,5 @@
 # ==============================================
-# Miscellaneous configuration file
+# Miscellaneous Configuration File
 # ==============================================
 # Keep XWayland clients alive even when not visible (0=no, 1=yes)
 xwayland_persistence=1
@@ -9,6 +9,8 @@ syncobj_enable=0
 adaptive_sync=0
 # Allow tearing for reduced latency (0=disabled, 1=fullscreen-only, 2=all-windows)
 allow_tearing=0
+# Allow transparent lock screen (0=disabled, 1=fullscreen-only)
+allow_lock_transparent=1
 # Allow applications to inhibit shortcuts (0=disabled, 1=enabled)
 allow_shortcuts_inhibit=1
 # Remove border when only one window is visible (0=no, 1=yes)
@@ -24,7 +26,7 @@ sloppyfocus=0
 # Warp cursor to focused client (0=no, 1=yes)
 warpcursor=1
 # Allow focus to cross monitors (0=no, 1=yes)
-focus_cross_monitor=1
+focus_cross_monitor=0
 # Allow exchange/swap windows across monitors (0=no, 1=yes)
 exchange_cross_monitor=1
 # Allow scratchpad to move across monitors (0=no, 1=yes)
