--- a/configs/.config/mango/conf/windowrule.conf
+++ b/configs/.config/mango/conf/windowrule.conf
@@ -5,7 +5,7 @@
 #
 # Common Properties:
 #   isfloating:0/1        - Force window to float (1) or tile (0)
-#   tag:N                 - Assign window to specific tag/workspace (1-9)
+#   tags:N                T- Assign window to specific tag/workspace (1-9)
 #   monitor:NAME          - Open window on specific monitor
 #   width:N, height:N     - Set window dimensions in pixels
 #   isglobal:0/1          - Make window visible on all tags
@@ -54,7 +54,7 @@ windowrule=isfloating:1,title:^Error$
 # VLC media player - float by default
 windowrule=isfloating:1,appid:^vlc$
 # MPV media player - float by default
-windowrule=isfloating:1,appid:^mpv$
+windowrule=isfloating:1,height:500,width:500,appid:^mpv$
 # qimgv image viewer - float by default
 windowrule=isfloating:1,appid:^qimgv$
 
@@ -144,7 +144,6 @@ windowrule=isfloating:1,appid:^vivaldi$,title:^Open File
 windowrule=isfloating:1,appid:^microsoft-edge$,title:^Save
 windowrule=isfloating:1,appid:^microsoft-edge$,title:^Open File
 # Float Helium dialogs
-# Float Edge dialogs
 windowrule=isfloating:1,appid:^helium$,title:^Save
 windowrule=isfloating:1,appid:^helium$,title:^Open File
 
