--- a/configs/.config/mango/config.conf
+++ b/configs/.config/mango/config.conf
@@ -1,16 +1,17 @@
 # ==============================================
-# Main Configuration File for Mango WM
+# Main Configuration File for MangoWC
 # ==============================================
 
 # ========== Load Configuration Files ==========
 source=~/.config/mango/conf/animation.conf
-source=~/.config/mango/conf/decoration.conf
+source=~/.config/mango/conf/appearance.conf
 source=~/.config/mango/conf/env.conf
 source=~/.config/mango/conf/exec.conf
 source=~/.config/mango/conf/input.conf
 source=~/.config/mango/conf/keybinding.conf
+source=~/.config/mango/conf/layerrule.conf
 source=~/.config/mango/conf/layout.conf
 source=~/.config/mango/conf/misc.conf
 source=~/.config/mango/conf/monitor.conf
-source=~/.config/mango/conf/rule.conf
+source=~/.config/mango/conf/tagrule.conf
 source=~/.config/mango/conf/windowrule.conf
