--- a/configs/.config/mango/conf/env.conf
+++ b/configs/.config/mango/conf/env.conf
@@ -1,9 +1,12 @@
 # ==============================================
-# Environment configuration file
+# Environment Configuration File
 # ==============================================
 
 # ========== Terminal ==========
 env=TERMINAL,kitty
+
+# ========== Move Dankbar to overlay layer ==========
+env=DMS_DANKBAR_LAYER,overlay
 
 # ========== Cursor settings ==========
 # Set cursor size in pixels
@@ -31,15 +34,16 @@ env=XDG_MENU_PREFIX,arch-
 
 # ========== Qt and Wayland ==========
 # Qt platform abstraction - prefer Wayland, fallback to XCB/X11
-env=QT_QPA_PLATFORM,wayland
+env=QT_QPA_PLATFORM,wayland;xcb
 # Force DPI for Qt Wayland sessions (96 is standard)
-env=QT_WAYLAND_FORCE_DPI,96
+env=QT_WAYLAND_FORCE_DPI,98
+# Enable automatic screen scaling for Qt applications
+env=QT_AUTO_SCREEN_SCALE_FACTOR,1
 # Qt5 platform theme for consistent styling
 env=QT_QPA_PLATFORMTHEME,qt6ct
 # Qt6 platform theme for consistent styling
 env=QT_QPA_PLATFORMTHEME_QT6,qt6ct
-# Enable automatic screen scaling for Qt applications
-env=QT_AUTO_SCREEN_SCALE_FACTOR,1
+
 
 # ========== GTK and Wayland ==========
 # Force GTK applications to use Wayland backend
